--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -19,7 +19,7 @@
     background-color: rgb(175, 66, 110);
     color: white;
     box-shadow: 10px 10px 5px rgb(203, 200, 200);
-    border-radius: 5px;
+    border-radius: 5px; 
 }
 
 .Header {
@@ -65,7 +65,7 @@
 .Content {
     /* background-color: rgb(58, 173, 129); */
     /* background-color: rgb(53, 72, 128); */
-    background-image: url("../images/Truck.jpeg");
+    background-image: url("");
     background-position: center;
     /* height: 100vh; */
     background-size: cover;
